# CorAlertMet

./: .gitattributes  .gitignore  .pylintrc  CHANGELOG.md  LICENSE  README.md  REPO_STRUCTURE.md  app.py  bandit_report.json  dev_cache_admin.py  logs-airfranc86-coralertmet-main-app.py-2025-10-23T23_15_06.467Z.txt  pyproject.toml  pytest.ini  requirements.txt
.cursor/docs/: AUTH_LOGGING_README.md  FOOTER_README.md  LibreriasPython.md  ML_MODULE_GUIDE.md  VALIDACION_PIPELINE_ML.md  WINDY_API_OPTIMIZATION.md
.cursor/plans/: reducir-deuda-t-cnica-f80d179c.plan.md
.cursor/rules/: ThemeFactory.mdc  docsMaintenance.mdc  mvpCAMet.mdc
.github/workflows/: train-models.yml
auth/: __init__.py  simple_auth.py
cache/: cache_manager.py
components/: CSS_DOCUMENTATION.md  __init__.py  footer.py  styles.py  svg_icons_simple.py  svg_icons_smooth.py
config/: __init__.py  logging_config.py  version.py
models/: gradient_boosting_model.pkl  random_forest_model.pkl  scaler.pkl
pages_modules/: cache_admin.py  map_live.py  ml_dashboard.py  reference.py
pages_modules/ml_models/: __init__.py  advanced_predictions.py  intelligent_alerts.py  model_validation.py  precision_metrics.py
security_analysis/: FINAL_QUALITY_REPORT.md  README.md  SECURITY_ANALYSIS_REPORT.md  SECURITY_FIXES_COMPLETED.md  security_analysis.bat  security_analysis.sh
tests/: __init__.py  conftest.py
tests/fixtures/: __init__.py
tests/unit/: __init__.py  test_advanced_predictions_simple.py  test_cache_manager.py  test_simple_auth.py
